--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -37,7 +37,7 @@ user.mail.send.address=projectb@project.coma
 
 user.app.version=t.1
 
-server.port=8092
+server.port=8094
 
 # direct send
 api.directsend.id=doaz
@@ -59,10 +59,10 @@ api.import.redirect.url=https://safeapp.codeidea.io/
 
 
 # API info
-api.info.title=codeidea cornsqure API
-api.info.description=\uCEE8\uC2A4\uD018\uC5B4 API
+api.info.title=safeapp-admin-API
+api.info.description=\uCEE8\uC2A4\uD018\uC5B4 Admin API
 api.info.dev.version=v1
-api.info.token.url=/user/login
+api.info.token.url=/login
 
 # logger level
 logging.level.root=debug
