갈아엎는중..

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,6 +4,7 @@ server.port=8094
 # Spring
 spring.main.allow-bean-definition-overriding=true
 spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jackson.serialization.fail-on-empty-beans=false
 
 # Logger
 logging.level.root=debug
