갈아엎는중..

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -71,7 +71,7 @@ api.directsend.url.sms=https://directsend.co.kr/index.php/api_v2/sms_change_word
 # API Info
 api.info.title=safeApp-Admin-API
 api.info.dev.version=v1
-api.info.description=\uCEE8\uC2A4\uD018\uC5B4 ??? API
+api.info.description=\uCEE8\uC2A4\uD018\uC5B4 \uad00\ub9ac\uc790 API
 api.info.token.url=/login
 
 # Import
