1. 회원 관리 > 작업 1차 완료
2. Admin 관리 > 작업 1차 완료

3. 프로젝트 관리 > 작업 진행 중

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,6 +8,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 # Logger
 logging.level.root=debug
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 logging.level.com.safeapp.admin=debug
 
 # JDBC
