- [아직 작업 안된 항목들] 을 제외한 모든 API 디버깅 후 1차 수정 완료
- 아직 작업 안된 항목들
1. 엑셀 내보내기 관련

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -29,8 +29,8 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.data.mongodb.uri=mongodb://consq_user:code0809_@158.247.197.51:27017/consqdb
 
 # Upload
-user.upload.path=/home/safeapp/api/upload/
-user.upload.web.path=/upload/
+user.upload.path=/home/safeapp/api/upload
+user.upload.web.path=/upload
 user.upload.allow.type=jpg,jpeg,png,gif,pdf,ppt,pptx,docs,docx,zip,rar,7zip,tar,tar.gz,xlsx,xlx
 
 # Multipart
