jdbc 운영 주소 추가

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,12 +12,13 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 logging.level.com.safeapp.admin=debug
 
 # JDBC
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:mariadb://158.247.197.51:3306/safeapp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
-spring.datasource.url=jdbc:log4jdbc:mariadb://158.247.197.51:3306/safeapp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=codeidea
 spring.datasource.password=code0809_
+# DEV
+spring.datasource.url=jdbc:log4jdbc:mariadb://158.247.197.51:3306/safeapp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+# PROD
+#spring.datasource.url=jdbc:log4jdbc:mariadb://141.164.48.111:3306/safeapp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
